[refactor] commandContext 타입 boolean 함수(isWrite, isErase) 추가 및 변경